Error busqueda asuntos por Jerarquia