@@ -824,8 +824,8 @@ public class EXTAsuntoDaoImpl extends AbstractEntityDao<Asunto, Long> implements
 
 		// FILTRO DE ZONAS
 		if (dto.getJerarquia() != null && dto.getJerarquia().length() > 0) {
-			hql.append(" and cnt.zona.nivel.id >= :nivelId");
-			params.put("nivelId", new Long(dto.getJerarquia()));
+			hql.append(" and cnt.zona.nivel.codigo >= :nivelId");
+			params.put("nivelId", Integer.valueOf(dto.getJerarquia()));
 
 			if (dto.getCodigoZonas().size() > 0) {
 				hql.append(" and ( ");
